fix add button size on mobile

--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -49,6 +49,18 @@
 	}
 }
 
+.nav-catalog-add-btn {
+	padding: 0.5rem;
+
+	span {
+		display: none;
+
+		@media (min-width: 768px) {
+			display: block;
+		}
+	}
+}
+
 /* Main content */
 .main-content {
 	margin: 0 auto;
